[gd_scene load_steps=4 format=3 uid="uid://b8gxh6dnxppc5"]

[ext_resource type="Script" path="res://block_part.gd" id="1_afob4"]
[ext_resource type="Texture2D" uid="uid://qfgou4skxwjl" path="res://assets/tetris-blocks.png" id="2_t515n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5dixh"]
size = Vector2(16, 16)

[node name="block_part" type="CharacterBody2D"]
script = ExtResource("1_afob4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5dixh")
debug_color = Color(0.94902, 0.0901961, 0.321569, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="." groups=["block_group"]]
texture = ExtResource("2_t515n")
hframes = 5
vframes = 3

[node name="ray_left" type="RayCast2D" parent="."]
target_position = Vector2(10, 0)

[node name="ray_down" type="RayCast2D" parent="."]
target_position = Vector2(0, 10)

[node name="ray_right" type="RayCast2D" parent="."]
target_position = Vector2(-10, 0)

[node name="ray_up" type="RayCast2D" parent="."]
target_position = Vector2(0, -10)
